Fix overflow issues with modals

--- a/CampaignManager.Frontend/src/styles/main.scss
+++ b/CampaignManager.Frontend/src/styles/main.scss
@@ -51,6 +51,8 @@
     .roll-initiative,
     .create-character,
     .map-select {
+      overflow-y: auto;
+      max-height: 50vh;
       z-index: 10;
       position: absolute;
       top: 50%;
